--- a/views/index.html
+++ b/views/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 	<link rel="stylesheet" href="/css/style.css">
 	<title>Semana de Sistemas Fundação Santo André 2018</title>
 </head>
-
 <body>
+	<!-- Modal Contato -->
+		<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLongLabel">Faça sua inscrição</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+							<form>
+								<div class="form-group">
+									<label for="exampleInputPassword1">Nome Completo</label>
+									<input type="text" class="form-control" id="exampleInputPassword1" placeholder="Digite seu Nome Completo">
+								</div>
+									<div class="form-group">
+										<label for="exampleInputEmail1">E-mail</label>
+										<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite seu E-mail">
+									</div>
+									<div class="form-group">
+										<button type="submit" class="btn btn-primary W-100">INSCREVA-SE GRATUITAMENTE</button>
+									</div>
+								</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	<!-- Modal Contato -->
 	<header>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
 			<div class="container">
@@ -43,7 +70,7 @@
 							<a class="nav-link" href="http://www.fsa.br/" target="_blank">Site FSA</a>
 						</li>
 						<li class="nav-item ml-3">
-							<a class="nav-link btn btn-primary" href="#">Inscreva-se</a>
+							<a class="nav-link btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Inscreva-se</a>
 						</li>
 						<li class="nav-item ml-3">
 							<a class="nav-link" href="#">
@@ -61,13 +88,9 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h2>O EVENTO</h2>
-					<p>
-						Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-						standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-						a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-						remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-						Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
-						of Lorem Ipsum.
+					<p class="text-justify">
+							A Semana de Sistemas realizada pela Fundação Santo André irá discutir as mudanças do mercado atual enfatizando o uso engrandecedor da tecnologia em prol da evolução das empresas a Indústria 4.0 e vem propondo inovações tecnológicas relacionadas á automação de processos, tornando-os mais eficientes e customizáveis. <br><br>
+							Vamos debater como as empresas estão se adaptando para acompanhar o mercado conhecendo na prática os reflexos de quem já vive essa nova era.
 					</p>
 				</div>
 				<div class="col-md-6">
@@ -83,40 +106,87 @@
 					<h2>PALESTRANTES</h2>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row mt-5">
 				<div class="col-md-3">
-					<img src="https://via.placeholder.com/250x350" alt="">
+					<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+					<div class="text-center mt-4">
+							<i class="fas fa-user-alt"></i> Paulo Baldin <br>
+						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/paulobaldin/" target="_blank">/linkedin</a>
+					</div>
 				</div>
 				<div class="col-md-3">
-					<img src="https://via.placeholder.com/250x350" alt="">
+					<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+					<div class="text-center mt-4">
+							<i class="fas fa-user-alt"></i> Rubens Sales <br>
+						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/rubens-sales-950b5713/" target="_blank">/linkedin</a>
+					</div>
 				</div>
 				<div class="col-md-3">
-					<img src="https://via.placeholder.com/250x350" alt="">
+					<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+					<div class="text-center mt-4">
+							<i class="fas fa-user-alt"></i> Alexandre Destro <br>
+						<!-- <i class="fab fa-linkedin"></i> <a href="#">/linkedin</a> -->
+					</div>
 				</div>
 				<div class="col-md-3">
-					<img src="https://via.placeholder.com/250x350" alt="">
+					<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+					<div class="text-center mt-4">
+							<i class="fas fa-user-alt"></i> Christian Alfim Marcondes<br>
+						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/christianmarcondes/">/linkedin</a>
+					</div>
 				</div>
 			</div>
+			<div class="row mt-5">
+					<div class="col-md-3">
+						<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+						<div class="text-center mt-4">
+							<i class="fas fa-user-alt"></i> Leandro Negreiros <br>
+						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/lnegreiros/" target="_blank">/linkedin</a>
+					</div>
+					</div>
+					<div class="col-md-3">
+						<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+						<div class="text-center mt-4">
+							<i class="fas fa-user-alt"></i> Cristiane Bulchi <br>
+						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/cristiane-%C3%A1vila-bulchi-501b7314b/">/linkedin</a>
+					</div>
+					</div>
+					<div class="col-md-3">
+						<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+						<div class="text-center mt-4">
+							<i class="fas fa-user-alt"></i> Não informado <br>
+						<!-- <i class="fab fa-linkedin"></i> <a href="#">/linkedin</a> -->
+					</div>
+					</div>
+					<div class="col-md-3">
+						<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+						<div class="text-center mt-4">
+							<i class="fas fa-user-alt"></i> Jairo Alves da Cunha<br>
+						<!-- <i class="fab fa-linkedin"></i> <a href="#">/linkedin</a> -->
+					</div>
+					</div>
+				</div>
 		</div>
 	</section>
+	<br><br>
 	<section id="programations">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2>PROGRAMAÇÃO/PALESTRAS</h2>
+					<h2>PROGRAMAÇÃO</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-3">
 					<div class="list-group" id="list-tab" role="tablist">
 						<a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home"
-						 role="tab" aria-controls="home">Segunda-feira</a>
+						 role="tab" aria-controls="home">Segunda-feira 22/10</a>
 						<a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile"
-						 role="tab" aria-controls="profile">Terça-feira</a>
+						 role="tab" aria-controls="profile">Terça-feira 23/10</a>
 						<a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages"
-						 role="tab" aria-controls="messages">Quarta-feira</a>
+						 role="tab" aria-controls="messages">Quarta-feira 24/10</a>
 						<a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings"
-						 role="tab" aria-controls="settings">Quinta-feira</a>
+						 role="tab" aria-controls="settings">Quinta-feira 25/10</a>
 					</div>
 				</div>
 				<div class="col-9">
@@ -125,21 +195,21 @@
 							<table class="table table-bordered">
 								<thead class="thead-light">
 									<tr>
-										<th colspan="1">#</th>
-										<th>Palestra/Palestrante - Segunda-feira</th>
+										<th colspan="1" class="text-center"><span class="fa fa-clock"></span></th>
+										<th>Palestra / Palestrante - Segunda-feira</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
 										<td colspan="1">20h</td>
 										<td>
-											Segurança na indústria 4.0 / <a href="#">Palestrante X</a>
+											Segurança na indústria 4.0 / <a href="#">Paulo Baldin</a>
 										</td>
 									</tr>
 									<tr>
-										<td colspan="1">20h</td>
+										<td colspan="1">20h40</td>
 										<td>
-											Técnologias 4.0 em processos logísticos / <a href="#">Palestrante X</a>
+											Técnologias 4.0 em processos logísticos / <a href="#">Rubens Sales</a> e <a href="#">Alexandre Destro</a>
 										</td>
 									</tr>
 								</tbody>
@@ -149,15 +219,15 @@
 							<table class="table table-bordered">
 								<thead class="thead-light">
 									<tr>
-										<th colspan="1">#</th>
-										<th>Palestra/Palestrante - Terça-feira</th>
+										<th colspan="1" class="text-center"><span class="fa fa-clock"></span></th>
+										<th>Palestra / Palestrante - Terça-feira</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
 										<td colspan="1">20h</td>
 										<td>
-											Impactos da Automação nas Indústrias / <a href="#">Palestrante X</a>
+											Impactos da Automação nas Indústrias / <a href="#">Christian Alfim Marcondes</a>
 										</td>
 									</tr>
 								</tbody>
@@ -167,21 +237,21 @@
 							<table class="table table-bordered">
 								<thead class="thead-light">
 									<tr>
-										<th colspan="1">#</th>
-										<th>Palestra/Palestrante - Quarta-feira</th>
+										<th colspan="1" class="text-center"><span class="fa fa-clock"></span></th>
+										<th>Palestra / Palestrante - Quarta-feira</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
 										<td colspan="1">20h</td>
 										<td>
-											TPS - Sistema Toyota de Produção / <a href="#">Palestrante X</a>
+											TPS - Sistema Toyota de Produção / <a href="#">Leandro Negreiros</a>
 										</td>
 									</tr>
 									<tr>
-										<td colspan="1">20h</td>
+										<td colspan="1">20h40</td>
 										<td>
-											Ecosistema Gerando Soluções / <a href="#">Palestrante X</a>
+											Ecossistemas de TI - Gerando soluções / <a href="#">Cristiane Bulchi</a>
 										</td>
 									</tr>
 								</tbody>
@@ -191,8 +261,8 @@
 							<table class="table table-bordered">
 								<thead class="thead-light">
 									<tr>
-										<th colspan="1">#</th>
-										<th>Palestra/Palestrante - Quinta-feira</th>
+										<th colspan="1" class="text-center"><span class="fa fa-clock"</span></th>
+										<th>Palestra / Palestrante - Quinta-feira</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -205,7 +275,7 @@
 									<tr>
 										<td colspan="1">20h</td>
 										<td>
-											Novas Técnologias Para as Empresas / <a href="#">Palestrante X</a>
+											Novas Técnologias Para as Empresas / <a href="#">Jairo Alves da Cunha</a>
 										</td>
 									</tr>
 								</tbody>
