--- a/views/index.html
+++ b/views/index.html
@@ -21,14 +21,14 @@
 						</button>
 					</div>
 					<div class="modal-body">
-							<form>
+							<form method="POST">
 								<div class="form-group">
-									<label for="exampleInputPassword1">Nome Completo</label>
-									<input type="text" class="form-control" id="exampleInputPassword1" placeholder="Digite seu Nome Completo">
+									<label>Nome Completo</label>
+									<input required type="text" name="name" class="form-control" placeholder="Digite seu Nome Completo">
 								</div>
 									<div class="form-group">
-										<label for="exampleInputEmail1">E-mail</label>
-										<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite seu E-mail">
+										<label>E-mail</label>
+										<input required type="email" name="email" class="form-control"  placeholder="Digite seu E-mail">
 									</div>
 									<div class="form-group">
 										<button type="submit" class="btn btn-primary W-100">INSCREVA-SE GRATUITAMENTE</button>
@@ -86,6 +86,13 @@
 	<section id="event">
 		<div class="container">
 			<div class="row">
+				<div class="col-md-12" id="message-success" style="display: none">
+						<div class="alert alert-success w-100" role="alert">
+							Sua inscrição foi realizada com sucesso!
+						</div>
+				</div>
+			</div>
+			<div class="row">
 				<div class="col-md-6">
 					<h2>O EVENTO</h2>
 					<p class="text-justify">
@@ -108,14 +115,14 @@
 			</div>
 			<div class="row mt-5">
 				<div class="col-md-3">
-					<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+					<img src="/images/p-1.jpeg" style="width: 250px; height: 250px" class="rounded-circle" alt="">
 					<div class="text-center mt-4">
 							<i class="fas fa-user-alt"></i> Paulo Baldin <br>
 						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/paulobaldin/" target="_blank">/linkedin</a>
 					</div>
 				</div>
 				<div class="col-md-3">
-					<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+					<img src="/images/p-2.jpeg" style="width: 250px; height: 250px" class="rounded-circle" alt="">
 					<div class="text-center mt-4">
 							<i class="fas fa-user-alt"></i> Rubens Sales <br>
 						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/rubens-sales-950b5713/" target="_blank">/linkedin</a>
@@ -129,7 +136,7 @@
 					</div>
 				</div>
 				<div class="col-md-3">
-					<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+					<img src="/images/p-4.jpeg" style="width: 250px; height: 250px" class="rounded-circle" alt="">
 					<div class="text-center mt-4">
 							<i class="fas fa-user-alt"></i> Christian Alfim Marcondes<br>
 						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/christianmarcondes/">/linkedin</a>
@@ -138,24 +145,24 @@
 			</div>
 			<div class="row mt-5">
 					<div class="col-md-3">
-						<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+						<img src="/images/p-5.jpeg" style="width: 250px; height: 250px" class="rounded-circle" alt="">
 						<div class="text-center mt-4">
 							<i class="fas fa-user-alt"></i> Leandro Negreiros <br>
 						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/lnegreiros/" target="_blank">/linkedin</a>
 					</div>
 					</div>
 					<div class="col-md-3">
-						<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+						<img src="/images/p-6.jpeg" style="width: 250px; height: 250px" class="rounded-circle" alt="">
 						<div class="text-center mt-4">
 							<i class="fas fa-user-alt"></i> Cristiane Bulchi <br>
 						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/cristiane-%C3%A1vila-bulchi-501b7314b/">/linkedin</a>
 					</div>
 					</div>
 					<div class="col-md-3">
-						<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+						<img src="/images/p-7.jpeg" style="width: 250px; height: 250px" class="rounded-circle" alt="">
 						<div class="text-center mt-4">
-							<i class="fas fa-user-alt"></i> Não informado <br>
-						<!-- <i class="fab fa-linkedin"></i> <a href="#">/linkedin</a> -->
+							<i class="fas fa-user-alt"></i> Alexsandro Campos <br>
+							<i class="fab fa-linkedin"></i> <a href="#">/linkedin</a>
 					</div>
 					</div>
 					<div class="col-md-3">
@@ -269,7 +276,7 @@
 									<tr>
 										<td colspan="1">20h</td>
 										<td>
-											Inovações da Indústria 4.0 / <a href="#">Palestrante X</a>
+											Inovações da Indústria 4.0 / <a href="#">Alexsandro Campos</a> e <a href="#"> Sidney Flores</a>
 										</td>
 									</tr>
 									<tr>
@@ -293,6 +300,11 @@
 					<h2>GALERIA EVENTO 2018</h2>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<h1>EM BREVE!</h1>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section id="maps">
@@ -309,6 +321,12 @@
 	 crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 	 crossorigin="anonymous"></script>
+
+	 <script>
+		 if (location.search.indexOf('success') >= 0) {
+			 document.getElementById('message-success').style = 'display: block';
+		 }
+	 </script>
 </body>
 
 </html>
