--- a/views/index.html
+++ b/views/index.html
@@ -82,7 +82,16 @@
 			</div>
 		</nav>
 	</header>
-	<section id="banner"></section>
+	<section id="banner">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8">
+					<h1>VENHA PARTICIPAR DA SEMANA DE SISTEMAS 2018 <br> DA FUNDAÇÃO SANTO ANDRÉ</h1>
+					<p>A Fundação Santo André promoverá de 22 a 25 de Outubro a Semana do Curso de Sistemas de Informação 2018. As palestras serão realizadas no Auditório da FAFIL a partir das 20hrs.</p>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section id="event">
 		<div class="container">
 			<div class="row">
@@ -129,17 +138,17 @@
 					</div>
 				</div>
 				<div class="col-md-3">
-					<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+					<img src="/images/p-3.jpeg" style="width: 250px; height: 250px" class="rounded-circle" alt="">
 					<div class="text-center mt-4">
 							<i class="fas fa-user-alt"></i> Alexandre Destro <br>
-						<!-- <i class="fab fa-linkedin"></i> <a href="#">/linkedin</a> -->
+						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/alexandre-destro-3b098079" target="_blank">/linkedin</a>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<img src="/images/p-4.jpeg" style="width: 250px; height: 250px" class="rounded-circle" alt="">
 					<div class="text-center mt-4">
 							<i class="fas fa-user-alt"></i> Christian Alfim Marcondes<br>
-						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/christianmarcondes/">/linkedin</a>
+						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/christianmarcondes/" target="_blank">/linkedin</a>
 					</div>
 				</div>
 			</div>
@@ -155,21 +164,21 @@
 						<img src="/images/p-6.jpeg" style="width: 250px; height: 250px" class="rounded-circle" alt="">
 						<div class="text-center mt-4">
 							<i class="fas fa-user-alt"></i> Cristiane Bulchi <br>
-						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/cristiane-%C3%A1vila-bulchi-501b7314b/">/linkedin</a>
+						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/cristiane-%C3%A1vila-bulchi-501b7314b/" target="_blank">/linkedin</a>
 					</div>
 					</div>
 					<div class="col-md-3">
 						<img src="/images/p-7.jpeg" style="width: 250px; height: 250px" class="rounded-circle" alt="">
 						<div class="text-center mt-4">
 							<i class="fas fa-user-alt"></i> Alexsandro Campos <br>
-							<i class="fab fa-linkedin"></i> <a href="#">/linkedin</a>
+							<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/alexsandrocampos/" target="_blank">/linkedin</a>
 					</div>
 					</div>
 					<div class="col-md-3">
-						<img src="https://via.placeholder.com/250x250" class="rounded-circle" alt="">
+						<img src="/images/p-8.jpeg" style="width: 250px; height: 250px" class="rounded-circle" alt="">
 						<div class="text-center mt-4">
 							<i class="fas fa-user-alt"></i> Jairo Alves da Cunha<br>
-						<!-- <i class="fab fa-linkedin"></i> <a href="#">/linkedin</a> -->
+						<i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/jairo-cunha-340231123" target="_blank">/linkedin</a>
 					</div>
 					</div>
 				</div>
@@ -210,13 +219,13 @@
 									<tr>
 										<td colspan="1">20h</td>
 										<td>
-											Segurança na indústria 4.0 / <a href="#">Paulo Baldin</a>
+											Segurança na indústria 4.0 / <a href="https://www.linkedin.com/in/paulobaldin/" target="_blank">Paulo Baldin</a>
 										</td>
 									</tr>
 									<tr>
 										<td colspan="1">20h40</td>
 										<td>
-											Técnologias 4.0 em processos logísticos / <a href="#">Rubens Sales</a> e <a href="#">Alexandre Destro</a>
+											Técnologias 4.0 em processos logísticos / <a href="https://www.linkedin.com/in/rubens-sales-950b5713/" target="_blank">Rubens Sales</a> e <a href="https://www.linkedin.com/in/alexandre-destro-3b098079" target="_blank">Alexandre Destro</a>
 										</td>
 									</tr>
 								</tbody>
@@ -234,7 +243,7 @@
 									<tr>
 										<td colspan="1">20h</td>
 										<td>
-											Impactos da Automação nas Indústrias / <a href="#">Christian Alfim Marcondes</a>
+											Impactos da Automação nas Indústrias / <a href="https://www.linkedin.com/in/christianmarcondes/" target="_blank">Christian Alfim Marcondes</a>
 										</td>
 									</tr>
 								</tbody>
@@ -252,13 +261,13 @@
 									<tr>
 										<td colspan="1">20h</td>
 										<td>
-											TPS - Sistema Toyota de Produção / <a href="#">Leandro Negreiros</a>
+											TPS - Sistema Toyota de Produção / <a href="https://www.linkedin.com/in/lnegreiros/" target="_blank">Leandro Negreiros</a>
 										</td>
 									</tr>
 									<tr>
 										<td colspan="1">20h40</td>
 										<td>
-											Ecossistemas de TI - Gerando soluções / <a href="#">Cristiane Bulchi</a>
+											Ecossistemas de TI - Gerando soluções / <a href="https://www.linkedin.com/in/cristiane-%C3%A1vila-bulchi-501b7314b/" target="_blank">Cristiane Bulchi</a>
 										</td>
 									</tr>
 								</tbody>
@@ -268,7 +277,7 @@
 							<table class="table table-bordered">
 								<thead class="thead-light">
 									<tr>
-										<th colspan="1" class="text-center"><span class="fa fa-clock"</span></th>
+										<th colspan="1" class="text-center"><span class="fa fa-clock"></span></th>
 										<th>Palestra / Palestrante - Quinta-feira</th>
 									</tr>
 								</thead>
@@ -276,13 +285,13 @@
 									<tr>
 										<td colspan="1">20h</td>
 										<td>
-											Inovações da Indústria 4.0 / <a href="#">Alexsandro Campos</a> e <a href="#"> Sidney Flores</a>
+											Inovações da Indústria 4.0 / <a href="https://www.linkedin.com/in/alexsandrocampos/" target="_blank">Alexsandro Campos</a> e <a href="https://www.linkedin.com/in/sidney-flores-7783b627/" target="_blank"> Sidney Flores</a>
 										</td>
 									</tr>
 									<tr>
 										<td colspan="1">20h</td>
 										<td>
-											Novas Técnologias Para as Empresas / <a href="#">Jairo Alves da Cunha</a>
+											Novas Técnologias Para as Empresas / <a href="https://www.linkedin.com/in/jairo-cunha-340231123" target="_blank">Jairo Alves da Cunha</a>
 										</td>
 									</tr>
 								</tbody>
