--- a/views/index.html
+++ b/views/index.html
@@ -87,7 +87,7 @@
 			<div class="row">
 				<div class="col-md-8">
 					<h1>VENHA PARTICIPAR DA SEMANA DE SISTEMAS 2018 <br> DA FUNDAÇÃO SANTO ANDRÉ</h1>
-					<p>A Fundação Santo André promoverá de 22 a 25 de Outubro a Semana do Curso de Sistemas de Informação 2018. As palestras serão realizadas no Auditório da FAFIL a partir das 20hrs.</p>
+					<p>A Fundação Santo André promoverá de 22 a 25 de Outubro a Semana do Curso de Bacharelado de Sistemas de Informação 2018. As palestras serão realizadas no Auditório da FAFIL a partir das 20hrs.</p>
 				</div>
 			</div>
 		</div>
