--- a/views/index.html
+++ b/views/index.html
@@ -73,7 +73,7 @@
 							<a class="nav-link btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Inscreva-se</a>
 						</li>
 						<li class="nav-item ml-3">
-							<a class="nav-link" href="#">
+							<a class="nav-link" href="https://www.facebook.com/fsasistemasdeinformacao" target="_blank">
 								<img src="/images/facebook.png" style="width: 25px;" alt="">
 							</a>
 						</li>
